<resources>
    <string name="app_name">Blood Sugar</string>
    <string name="new_record">New record</string>
    <string name="edit_record">Edit record</string>
    <string name="history">History</string>
    <string name="remind_me">Remind Me</string>
    <string name="data_tracking_analysis">Data Tracking and Analysis</string>
    <string name="recent">Recent</string>
    <string name="average">Average</string>
    <string name="all">All</string>
    <string name="about_blood">Know about blood sugar</string>
    <string name="prevent_disease">Prevent Disease</string>
    <string name="know_blood_sugar">Do you know blood sugar?</string>
    <string name="low_blood_sugar">What is low blood sugar?</string>
    <string name="high_blood_sugar">What is high blood sugar?</string>
    <string name="monitoring_blood_sugar">Monitoring blood sugar</string>
    <string name="knowledge_of_diabetes">Knowledge of Diabetes</string>
    <string name="low_hypoglycemia">Low Blood Sugar (Hypoglycemia)</string>
    <string name="treat_low_blood_sugar">How To Treat Low Blood Sugar</string>
    <string name="prediabetes">Prediabetes - Prevent Type 2</string>
    <string name="type_diabetes">What is Type 1 Diabetes?</string>
    <string name="type_diabetess">What is Type 2 Diabetes?</string>
    <string name="gestational">Gestational Diabetes</string>
    <string name="content_know_blood_sugar">
        <b><i>What is blood sugar?</i></b>\n\n
Blood sugar, or glucose, is the main sugar found
in your blood. It comes from the food you eat,
and is your body of main source of energy. Your
blood carries glucose to all of your body of cells
to use for energy.\n\n\n
<b><i>How can I check my blood sugar?</i></b>\n\n
Use a blood sugar meter (also called a
glucometer) or a continuous glucose monitor
(CGM) to check your blood sugar. A blood sugar
meter measures the amount of sugar in a small
sample of blood, usually from your fingertip. A
CGM uses a sensor inserted under the skin to
measure your blood sugar every few minutes. If
you use a CGM, you\'ll still need to test daily with
a blood sugar meter to make sure your CGM
readings are accurate.\n\n\n
        <b><i>When should I check my blood sugar?</i></b>\n\n
        How often you check your blood sugar depends
on the type of diabetes you have and if you take
any diabetes medicines.
Typical times to check your blood sugar include:\n
. When you first wake up, before you eat or drink
anything.\n
· Before a meal.\n
· Two hours after a meal.\n
. At bedtime.</string>
    <string name="content_low_blood_sugar">
        <b><i>What causes low blood sugar?</i></b>\n\n
Low blood sugar (also called hypoglycemia)
has many causes, including missing a meal,
taking too much insulin, taking other diabetes
medicines, exercising more than normal, and
drinking alcohol. Blood sugar below 70 mg/dL is
considered low.\n\n
Signs of low blood sugar are different for
everyone. Common symptoms include:\n
· Shaking.\n
· Sweating.\n
· Nervousness or anxiety.\n
· Irritability or confusion.\n
. Dizziness.\n
• Hunger.\n\n\n
        <b><i>How can I treat low blood sugar?</i></b>\n\n
Carry supplies for treating low blood sugar with
you. If you feel shaky, sweaty, or very hungry or
have other symptoms, check your blood sugar.
Even if you don\'t have symptoms but think you
may have low blood sugar, check it.\n\n
If your blood sugar is lower than 70 mg/dL, do
one of the following immediately:\n
• Take four glucose tablets.\n
• Drink four ounces of fruit juice.\n
• Drink four ounces of regular soda, not diet
soda.\n
- Eat four pieces of hard candy.\n\n
    Wait for 15 minutes and then check your blood
sugar again. Do one of the above treatments
again until your blood sugar is 70 mg/dL or
above and eat a snack if your next meal is an
hour or more away.</string>
    <string name="content_high_blood_sugar"><b><i>What causes blood sugar to be high?</i></b>\n\n
Many things can cause high blood sugar (hyperglycemia), including being sick, being stressed, eating more than planned, and not giving yourself enough insulin. Over time, high blood sugar can lead to long-term, serious health problems.\n\n
Symptoms of high blood sugar include:\n
· Feeling very tired.\n
· Feeing thirsty.\n
· Having blurry vision.\n
· Needing to urinate (pee) more often.\n\n\n
        <b><i>How can I treat high blood sugar?</i></b>\n\n
    Talk to your doctor about how to keep your blood sugar levels within your target range. Your doctor may suggest the following:\n
        · Be more active. Regular exercise can help keep your blood sugar levels on track. Important: don\'t exercise if ketones are present in your urine. This can make your blood sugar go even higher.\n
        · Take medicine as instructed. If your blood sugar is often high, your doctor may change how much medicine you take or when you take it.\n
        · Follow your diabetes meal plan. Ask your doctor or dietitian for help if you\'re having trouble sticking to it.\n
        · Check your blood sugar as directed by your doctor. Check more often if you\'re sick or if you\'re concerned about high or low blood sugar.\n
        · Talk to your doctor about adjusting how much insulin you take and what types of insulin (such as short-acting) to use.</string>
    <string name="content_monitoring_blood_sugar"><b><i>How to Use a Blood Sugar Meter</i></b>\n \n
There are different kinds of meters, but most of them work the same way. Below are tips for how to use a blood sugar meter. \n
1. Make sure the meter is clean and ready to use. \n
2. After removing a test strip, immediately close the test strip container tightly. Test strips can be damaged if they are exposed to moisture. \n
3. Wash your hands with soap and warm water. Dry well. Massage your hand to get blood into your finger. Don\'t use alcohol because it dries the skin too much. \n
4. Use a lancet to prick your finger. Squeezing from the base of the finger, gently place a small amount of blood onto the test strip. Place the strip in the meter. \n
5. After a few seconds, the reading will appear. Track and record your results. Add notes about anything that might have made the reading out of your target range, such as food, activity, etc.
6. Properly dispose the lancet and strip in a trash container. \n
7. Do not share blood sugar monitoring equipment, such as lancets, with anyone, even other family members. For more safety information, please see Infection Prevention during Blood Glucose Monitoring and Insulin Administration.\n
8. Store test strips in the container provided. Do not expose them to moisture, extreme heat, or cold temperatures.\n \n

        <b><i>Getting an A1C Test </i></b>\n \n
A1C results tell you your average blood sugar level over 3 months. A1C results may be different in people with hemoglobin problemsexternal icon such as sickle cell anemia. Work with your doctor to decide the best A1C goal for you. Follow your doctor\'s advice and recommendations.
Your A1C result will be reported in two ways:\n
        · A1C as a percentage. \n
        · Estimated average glucose (eAG), in the same, kind of numbers as your day-to-day blood sugar readings.</string>
    <string name="content_knowledge_of_diabetes"><b><i>What is Diabetes?</i></b> \n\n
Your body breaks down most of the food you eat into sugar and releases it into your bloodstream. When your blood sugar goes up, it signals your pancreas to release insulin. Insulin acts like a key to let the blood sugar into your body\'s cells for use as energy.\n
With diabetes, your body doesn\'t make enough insulin or can\'t use it as well as it should. \n
When there isn\'t enough insulin or cells stop responding to insulin, too much blood sugar stays in your bloodstream. Over time, that can cause serious health problems. \n
There are three main types of diabetes: type 1, type 2, and gestational diabetes.\n\n\n

        <b><i>Useful tips</i></b> \n\n
        There isn\'t a cure yet for diabetes, but losing weight, eating healthy food, and being active can really help.Other things you can do to help: \n
       ·  Take medicine as prescribed. \n
       ·  Get diabetes self-management education and support.\n
       ·  Make and keep health care appointments.</string>
    <string name="content_low_hypoglycemia"><b><i>Causes of Low Blood Sugar</i></b> \n\n
There are many reasons why you may have low blood sugar, including: \n
· Taking too much insulin. \n
· Not eating enough carbs for how much insulin you take. \n
· Timing of when you take your insulin. \n
· The amount and timing of physical activity. \n
· Drinking alcohol. \n
· How much fat, protein, and fiber are in your meal.\n
· Hot and humid weather. \n
· Unexpected changes in your schedule.\n
· Spending time at a high altitude. \n
· Going through puberty. \n
· Menstruation.\n\n\n

        <b><i>Symptoms of Low Blood Sugar</i></b> \n
How you react to low blood sugar may not be the same as how someone else with low blood sugar reacts. It\'s important to know your signs. Common symptoms may include: \n
· Fast heartbeat Shaking \n
· Sweating \n
· Nervousness or anxiety \n
· Irritability or confusion \n
· Dizziness \n
· Hunger</string>
    <string name="before_exercise">Before exercise</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="save">SAVE</string>
    <string name="condition">Condition</string>
    <string name="before_meal">Before a meal</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="content_dia_add">You already have a piece of data at this time. Do you need to cover it or add a new piece of data?</string>
    <string name="cover_it">Cover it?</string>
    <string name="add">ADD</string>
    <string name="cover">COVER</string>
    <string name="about">About us</string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="terms"><u>Terms of Service</u></string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="snoozeFrequencyLabel">Snooze frequency:</string>
    <string name="snoozeFreq_three">3 times</string>
    <string name="snoozeFreq_five">5 times</string>
    <string name="snoozeFreq_ten">10 times</string>
    <string name="snoozeFreq_custom">Custom frequency:</string>
    <string name="snoozeFreq_customHint">Enter a number</string>
    <string name="snoozeIntervalLabel">Snooze interval:</string>
    <string name="snoozeInterval_five">5 minutes</string>
    <string name="snoozeInterval_ten">10 minutes</string>
    <string name="snoozeInterval_fifteen">15 minutes</string>
    <string name="snoozeInterval_custom">Custom interval (in mins):</string>
    <string name="require_permission_exact_alarms">Require permission to set exact alarms</string>
    <string name="request_exact_alarm_perm">On Android S and higher, the app needs permission to schedule exact alarms. Without this, no alarm can
        be set. Please go to Settings and enable this permission to continue setting an alarm.</string>
    <string name="grant_permission">Missing permission</string>
    <string name="perm_granted">Thanks for the permission. Setting up alarms. You may close the app.</string>
</resources>