<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_view_add_type">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/style_15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            style="@style/style_15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_view_date"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/before_exercise"
            android:textStyle="bold" />

        <TextView
            style="@style/style_15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/before_meal"
            android:textColor="@color/xam_nhat" />


        <TextView
            android:id="@+id/btnOk"
            style="@style/style_15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_save"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
